fix alignment issue with marign&height at Popups

--- a/src/core/Video/App.css
+++ b/src/core/Video/App.css
@@ -73,3 +73,7 @@
   padding: 0 !important;
 }
 
+
+.popContent .player-wrapper {
+  margin: 0 -10px -10px 0 ;
+}
